--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="">
-<title>Stooge CSS Framework</title>
-<style>
-body { background-color: #ffffff; margin: 0; }
-
-
-</style>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <title>Stooge CSS Framework</title>
+    <style>
+        body {
+            background-color: #ffffff;
+            margin: 0;
+        }
+    </style>
 </head>
+
 <body>
-<header role="banner">
+    <header role="banner">
 
-</header>
-
+    </header>
+    <h1>Stooge CSS</h1>
 
 </body>
+
 </html>
