intro.html -> index.html

--- a/text.html
+++ b/text.html
@@ -50,15 +50,15 @@
 
         <aside class="pl-2 sans-serif">
             <nav>
-                <h2 class="mb-05 lh-075"><a href="./intro.html"
+                <h2 class="mb-05 lh-075"><a href="./index.html"
                         class="link lh-125 fs-1125 black no-underline link-visited hover-blue-14 hover-underline">About
                         Stooge CSS</a>
                 </h2>
                 <ul class="ml-025 my-0 list fw-4 black di-no">
-                    <li class="pa-05 br-05 hover-bc-grey-5"><a href="./intro.html#introduction" class="link black no-underline link-visited hover-blue-14
+                    <li class="pa-05 br-05 hover-bc-grey-5"><a href="./index.html#introduction" class="link black no-underline link-visited hover-blue-14
                             hover-underline">Introduction</a>
                     </li>
-                    <li class="pa-05 br-05 hover-bc-grey-5"><a href="./intro.html#getting-started"
+                    <li class="pa-05 br-05 hover-bc-grey-5"><a href="./index.html#getting-started"
                             class="link black no-underline link-visited hover-blue-14 hover-underline">Gettting
                             started</a>
                     </li>
@@ -198,7 +198,7 @@
                         <p>Text</p>
                     </button>
                     <div class="dropdown-content">
-                        <a href="./intro.html">About Stooge CSS</a>
+                        <a href="./index.html">About Stooge CSS</a>
                         <a href="./layout-and-position.html">Layout and Position</a>
                         <a href="./spacing.html">Spacing</a>
                         <a href="./visibility-and-box-model.html">Visibility and Box-Model</a>
