--- a/components.html
+++ b/components.html
@@ -528,20 +528,17 @@
 
                         <div class="card wi-30-p my-2 py-05 bsw-2 bo-cyan-8">
                             <div class="di-fl fd-co ai-ce">
-                                <img class="card__img wi-60-p" src="http://via.placeholder.com/150" alt="">
+                                <img class="card__img wi-16" src="http://via.placeholder.com/150" alt="">
                                 <h3 class="card_title mt-2 ta-ce fs-125">SIGN UP</h3>
-                                <p class="card__text fs-1 lh-125 grey-17 fw-3 ls-01 px-1">Create your free account
-                                    and
-                                    choose the
-                                    plan
-                                    that fits your needs.</p>
+                                <p class="card__text fs-1 lh-125 grey-17 fw-3 ls-01 px-1">Create your free account and
+                                    choose the plan that fits your needs.</p>
                             </div>
                         </div>
 
                         <p class="mt-2 mb-0 black">To get this layout, copy this code and paste it into your HTML.
                         </p>
                         <p class="mt-025 mb-0 black">HTML:</p>
-                        <pre class="mt-1 pa-1 br-075 pt-25 po-re wi-100-p"><code class="pb-0">&ltdiv class="card wi-30-p my-2 py-05 bsw-2 bo-cyan-8"&gt
+                        <pre class="mt-1 pa-1 br-075 pt-25 po-re wi-100-p"><code class="pb-0">&ltdiv class="card wi-16 my-2 py-05 bsw-2 bo-cyan-8"&gt
 	&ltdiv class="di-fl fd-co ai-ce"&gt
 		&ltimg class="card__img wi-60-p" src="http://via.placeholder.com/150" alt=""&gt
 		&lth3 class="card_title mt-2 ta-ce fs-125"&gtSIGN UP&lt/h3&gt
