table width fix

--- a/components.html
+++ b/components.html
@@ -526,7 +526,7 @@
 &lt/div&gt</code><button class="btn btn-copy">Copy</button></pre>
 
 
-                        <div class="card wi-30-p my-2 py-05 bsw-2 bo-cyan-8">
+                        <div class="card wi-16 my-2 py-05 bsw-2 bo-cyan-8">
                             <div class="di-fl fd-co ai-ce">
                                 <img class="card__img wi-16" src="http://via.placeholder.com/150" alt="">
                                 <h3 class="card_title mt-2 ta-ce fs-125">SIGN UP</h3>
