--- a/layout-and-position.html
+++ b/layout-and-position.html
@@ -244,7 +244,7 @@
 
                     <p>Use the green columns (second and fourth columns) to get the property and
                         value you want eg <span class="italic">di-fl</span>. Seperate it by a '-' dash.</p>
-                    <table class="mt-05">
+                    <table class="mt-05 fivecol">
                         <thead>
                             <tr>
                                 <td class="wi-20-p">Property</td>
@@ -356,7 +356,7 @@
                     <p>Use the green columns (second and fourth columns) to get the property and
                         value you want eg <span class="italic">zt-10</span>. Seperate it by a '-' dash.</p>
 
-                    <table class="mt-05 mb-1">
+                    <table class="mt-05 mb-1 fivecol">
                         <thead>
                             <tr>
                                 <td class="wi-20-p">Property</td>
@@ -606,7 +606,7 @@
                     <p>Use the green columns (second and fourth columns) to get the property and
                         value you want eg mt-05. Seperate it by a '-' dash.</p>
 
-                    <table class="mt-05 mb-25">
+                    <table class="mt-05 mb-25 fivecol">
                         <thead>
                             <tr>
                                 <td class="wi-20-p">Property</td>
