--- a/spacing.html
+++ b/spacing.html
@@ -251,7 +251,7 @@
                     <p>Remember to put in the '-p','-vh' or '-vw' if you have that option and you want percentage or vh
                         or vw. Also, remember than 'a' is needed for units more than 20rem, to distinguish between 35rem
                         and 3.5rem.</p>
-                    <table class="mt-05 mb-05">
+                    <table class="mt-05 mb-05 fivecol">
                         <thead>
                             <tr>
                                 <td class="wi-20-p">Property</td>
