--- a/text.html
+++ b/text.html
@@ -244,7 +244,7 @@
                     <p>Use the green columns (second and fourth columns) to get the property and
                         value you want eg mt-05. Seperate it by a '-' dash.</p>
 
-                    <table class="mt-05 mb-05">
+                    <table class="mt-05 mb-05 fivecol">
                         <thead>
                             <tr>
                                 <td class="wi-20-p">Property</td>
