table width fix

--- a/layout-and-position.html
+++ b/layout-and-position.html
@@ -579,12 +579,12 @@
                             centering and
                             responsive code with a max-width for each
                             breakpoint.</p>
-                        <pre class="mt-1 pa-1 br-075 pt-25 po-re wi-20a"><code>&lt;div class="container"&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <pre class="mw-20a mt-1 pa-1 br-075 pt-25 po-re"><code>&lt;div class="container"&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &lt;!-- Content here --&gt;
 &lt;/div&gt;</code><button class="btn btn-copy">Copy</button></pre>
                         <p class="mt-15"><span class="code fw-5">.container-fluid</span> has no maximum width. Width
                             adjusts to the screen size with a fixed padding.</p>
-                        <pre class="mt-1 pa-1 br-075 pt-25 po-re wi-20a"><code>&lt;div class="container-fluid"&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <pre class="mw-20a mt-1 pa-1 br-075 pt-25 po-re"><code>&lt;div class="container-fluid"&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &lt;!-- Content here --&gt;
 &lt;/div&gt;</code><button class="btn btn-copy">Copy</button></pre>
 
@@ -593,7 +593,7 @@
                             Similar to <span class="code fw-5">.container</span> but without <span
                                 class="italic">margin-left: auto</span> and <span class="italic">margin-right:
                                 auto</span>.</p>
-                        <pre class="mt-1 pa-1 br-075 pt-25 po-re wi-20a"><code>&lt;div class="wrapper"&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <pre class="mw-20a mt-1 pa-1 br-075 pt-25 po-re"><code>&lt;div class="wrapper"&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &lt;!-- Content here --&gt;
 &lt;/div&gt;</code><button class="btn btn-copy">Copy</button></pre>
 
