html and css updates and package.json

--- a/animation.html
+++ b/animation.html
@@ -272,7 +272,6 @@
                         properties, use the <span class="code fw-5">tr-all</span> class.</p>
 
 
-                    <div class="px-15 pt-05 pb-0 mt-4">
                         <table class="animation">
                             <thead>
                                 <tr>
@@ -485,15 +484,15 @@
                             are shown further down.</p>
                         <div class="di-fl fd-ce fd-co-m3">
                             <input type="text"
-                                class="txt my-2 mx-2 px-1 he-3 fs-1 br-025 bc-yellow-2 focus-bw-2 hover-ou-1"
+                                class="txt my-2 mx-2 mx-auto-m3 px-1 he-3 fs-1 br-025 bc-yellow-2 hover-bc-yellow-8 focus-bw-2 hover-ou-1"
                                 placeholder="Text field, click me">
-                            <a class="di-bl link btn my-2 mx-2 wi-16 he-2 py-025 fs-125 white bc-orange-10 br-025
+                            <a class="di-bl link btn my-2 mx-2 mx-auto-m3 wi-16 he-2 py-025 fs-125 white bc-orange-10 br-025
                                 hover-purple-20 hover-underline hover-blinker tr-all">Hover over this anchor
                                 link</a>
                         </div>
 
                         <p>HTML:</p>
-                        <pre class="mt-1 pa-1 br-075 pt-25 po-re wi-100-p"><code>&lt;input type="text" class="txt my-2 mx-2 px-1 he-3 fs-1 br-025 bc-yellow-2 focus-bw-2 hover-ou-1" placeholder="Text field, click me">
+                        <pre class="mt-1 pa-1 br-075 pt-25 po-re wi-100-p"><code>&lt;input type="text" class="txt my-2 mx-2 px-1 he-3 fs-1 br-025 bc-yellow-2 hover-bc-yellow-8 focus-bw-2 hover-ou-1" placeholder="Text field, click me">
 &lt;a class="di-bl link btn my-2 mx-2 wi-16 he-2 py-025 fs-125 white bc-orange-10 br-025 hover-purple-20 hover-underline hover-blinker tr-all"&gt;Hover over this anchor ink&lt;/a&gt;
 </code><button class="btn btn-copy">Copy</button></pre>
 
@@ -980,7 +979,7 @@
                         </div>
 
 
-                    </div>
+
                 </div>
             </section>
 
