--- a/components.html
+++ b/components.html
@@ -402,11 +402,11 @@
                     <div class="mt-15"><span class="id" id="anchor-tags"> &nbsp; </span></div>
                     <div class="mt-15">
                         <h3>Anchor tags (Links)</h3>
+                        <p>The <span class="code fw-5">.link</span> class provides some sensible anchor link defaults.</p>
                         <a class="di-bl link my-1 fs-125">Basic anchor tag</a>
                         <a class="di-bl link my-1 fs-125">Basic anchor tag</a>
                         <a class="di-bl link btn my-1 wi-12 he-au  py-025 fs-125 white bc-purple-12 br-025">Basic
-                            button
-                            link</a>
+                            button link</a>
                         <p><span class="code fw-5">.link-visited</span> is a special class that makes any visited links
                             the same color as non-visited links ie <span class="italic">currentColor</span> instead of
                             the browser default color for visited links (usually purple).</p>
@@ -416,6 +416,7 @@
                     <div class="mt-15"><span class="id" id="text-fields"> &nbsp; </span></div>
                     <div class="mt-3">
                         <h3>Text fields</h3>
+                        <p>The <span class="code fw-5">.txt</span> class provides some sensible text field defaults.</p>
                         <input type="text" class="txt" placeholder="Text field">
                         <br>
                         <pre
@@ -528,7 +529,7 @@
 
                         <div class="card wi-16 my-2 py-05 bsw-2 bo-cyan-8">
                             <div class="di-fl fd-co ai-ce">
-                                <img class="card__img wi-16" src="http://via.placeholder.com/150" alt="">
+                                <img class="card__img wi-16 px-05" src="http://via.placeholder.com/150" alt="">
                                 <h3 class="card_title mt-2 ta-ce fs-125">SIGN UP</h3>
                                 <p class="card__text fs-1 lh-125 grey-17 fw-3 ls-01 px-1">Create your free account and
                                     choose the plan that fits your needs.</p>
