--- a/index.html
+++ b/index.html
@@ -408,9 +408,9 @@
                     <h3>Getting Started</h3>
 
                     <p>Place these lines into the <span class="code">&lt;head&gt;</span> of your HTML file.</p>
-                    <pre class="mt-1 pa-1 br-075 pt-25 po-re mw-40a"><code>&lt;link href="https://raw.githubusercontent.com/chrisjwaddell/Stooge-CSS/main/dist/stooge.min.css" rel="stylesheet"&gt
-&ltlink href="https://raw.githubusercontent.com/chrisjwaddell/Stooge-CSS/main/dist/stooge-responsive.min.css" rel="stylesheet"&gt
-&ltlink href="https://raw.githubusercontent.com/chrisjwaddell/Stooge-CSS/main/dist/stooge-colors.min.css" rel="stylesheet"&gt</code>
+                    <pre class="wi-100-p mt-1 pa-1 br-075 pt-25 po-re"><code>&lt;link href="https://cdn.rawgit.com/chrisjwaddell/Stooge-CSS/main/dist/stooge.min.css" rel="stylesheet"&gt
+&ltlink href="https://cdn.rawgit.com/chrisjwaddell/Stooge-CSS/main/dist/stooge-responsive.min.css" rel="stylesheet"&gt
+&ltlink href="https://cdn.rawgit.com/chrisjwaddell/Stooge-CSS/main/dist/stooge-colors.min.css" rel="stylesheet"&gt</code>
 <button class="btn btn-copy">Copy</button></pre>
 
                 </div>
