--- a/sampel2.html
+++ b/sampel2.html
@@ -80,9 +80,9 @@
             </p>
             <h1>How to get started</h1>
             <p>Add this to the &lt;head&gt; of your HTML file:<br>
-                <code>&lt;link href="https://cdn.rawgit.com/chrisjwaddell/Stooge-CSS/main/dist/stooge.min.css" rel="stylesheet"&gt;</code><br>
-                <code>&lt;link href="https://cdn.rawgit.com/chrisjwaddell/Stooge-CSS/main/dist/stooge-responsive.min.css" rel="stylesheet"&gt;</code><br>
-                <code>&lt;link href="https://cdn.rawgit.com/chrisjwaddell/Stooge-CSS/main/dist/stooge-colors.min.css" rel="stylesheet"&gt;</code>
+                <code>&lt;link href="https://cdn.jsdelivr.net/gh/chrisjwaddell/Stooge-CSS@main/dist/stooge.min.css" rel="stylesheet"&gt;</code><br>
+                <code>&lt;link href="https://cdn.jsdelivr.net/gh/chrisjwaddell/Stooge-CSS@main/dist/stooge-responsive.min.css" rel="stylesheet"&gt;</code><br>
+                <code>&lt;link href="https://cdn.jsdelivr.net/gh/chrisjwaddell/Stooge-CSS@main/dist/stooge-colors.min.css" rel="stylesheet"&gt;</code>
             </p>
             <h2>Table of Contents</h2>
             <ul>
