--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="di-fl px-3 px-1-m5 py-075 he-100-p jc-sb">
                 <div class="di-fl ai-ce jc-sb">
                     <div class="fl-1">
-                        <p class="di-ib wi-10 he-25 ma-0 px-1 py-025 br-3 bsw-1 fs-125 font-mono fw-6 bc-blue-14 white
+                        <p class="di-ib wi-10 he-25 ma-0 px-1 py-025 br-3 bsw-1 fs-125 font-mono ta-ce lh-15 fw-6 bc-blue-14 white
                             bo-white">Stooge CSS
                         </p>
-                        <p id="dev" class="di-ib ma-0 pl-1 fs-125 blue-grey-2 ts-42">Develop fast. CSS in HTML</p>
+                        <p id="dev" class="di-ib ma-0 pl-1 fs-125 white ts-42">Develop fast. CSS in HTML</p>
                     </div>
                 </div>
                 <div class="fl-1">
@@ -220,10 +220,12 @@
                 <div class="container">
                     <div class="di-fl fd-co">
                         <div class="mt-225 mt-05-m3">
-                            <h2 class="ta-ce ma-0 px-1 py-025 fs-25 fs-175-m4 ta-ce font-sans fw-6 white">Stooge CSS</h2>
+                            <h2 class="ta-ce ma-0 px-1 py-025 fs-25 fs-175-m4 ta-ce font-sans fw-6 white">Stooge CSS
+                            </h2>
                         </div>
                         <div class="fl-1">
-                            <h2 class="ta-ce fs-175 fs-15-m4 lh-15 ts-42 mt-1 px-4-m3 px-15-m4 font-mons orange-4">A powerful, intuitive CSS framework
+                            <h2 class="ta-ce fs-175 fs-15-m4 lh-15 ts-42 mt-1 px-4-m3 px-15-m4 font-mons orange-4">A
+                                powerful, intuitive CSS framework
                                 for fast web development</h2>
                         </div>
 
@@ -291,7 +293,8 @@
                     <h4 class="mt-125 mb-0 fs-125 calisto blue-15">Units</h4>
                     <p>If units are not defined, they default to <span class="italic">rem</span> units in most cases.
                         <span class="code fw-5">p</span> is percentage, <span class="code fw-5">n</span> is negative,
-                        <span class="code fw-5">vh</span> is vh.</p>
+                        <span class="code fw-5">vh</span> is vh.
+                    </p>
                     <p><span class="code fw-5">mw-50-p</span> is <span class="italic">max-width: 50%</span></p>
                     <p><span class="code fw-5">ma-1-n</span> is <span class="italic">margin: -1rem</span></p>
                     <p><span class="code fw-5">he-100-vh</span> is <span class="italic">height: 100vh</span>
@@ -299,7 +302,8 @@
 
                     <h4 class="mt-125 mb-0 fs-125 calisto blue-15">Responsiveness</h4>
                     <p>Just add <span class="code fw-5">-m1</span>, <span class="code fw-5">-m2</span>, up to
-                        <span class="code fw-5">-m5</span> to the class name.</p>
+                        <span class="code fw-5">-m5</span> to the class name.
+                    </p>
                     <p><span class="code fw-5">wi-100-p-m1 wi-50-p-m3</span> would give you width of 100% on
                         large
                         devices and
@@ -408,9 +412,9 @@
                     <h3>Getting Started</h3>
 
                     <p>Place these lines into the <span class="code">&lt;head&gt;</span> of your HTML file.</p>
-                    <pre class="wi-100-p mt-1 pa-1 br-075 pt-25 po-re"><code>&lt;link href="https://cdn.rawgit.com/chrisjwaddell/Stooge-CSS/main/dist/stooge.min.css" rel="stylesheet"&gt
-&ltlink href="https://cdn.rawgit.com/chrisjwaddell/Stooge-CSS/main/dist/stooge-responsive.min.css" rel="stylesheet"&gt
-&ltlink href="https://cdn.rawgit.com/chrisjwaddell/Stooge-CSS/main/dist/stooge-colors.min.css" rel="stylesheet"&gt</code>
+                    <pre class="wi-100-p mt-1 pa-1 br-075 pt-25 po-re"><code>&lt;link href="https://cdn.jsdelivr.net/gh/chrisjwaddell/Stooge-CSS@main/dist/stooge.min.css" rel="stylesheet"&gt
+&ltlink href="https://cdn.jsdelivr.net/gh/chrisjwaddell/Stooge-CSS@main/dist/stooge-responsive.min.css" rel="stylesheet"&gt
+&ltlink href="https://cdn.jsdelivr.net/gh/chrisjwaddell/Stooge-CSS@main/dist/stooge-colors.css" rel="stylesheet"&gt</code>
 <button class="btn btn-copy">Copy</button></pre>
 
                 </div>
@@ -428,7 +432,9 @@
                     <div class="di-fl fd-co jc-ce">
                         <p class="footer__logo di-ib wi-10 he-25 ma-0 px-1 py-025 ta-ce br-3 bsw-1 fs-125 font-mono fw-6 bc-blue-14 white
                             bo-white">Stooge CSS</p>
-                        <p class="footer_cont mt-05 wi-16 fs-0875 lh-125 mb-05">We want to make Stooge CSS even greater, so plesae <a href="https://github.com/chrisjwaddell/Stooge-CSS/blob/main/CONTRIBUTIONS.md" class="link white underline link-visited">contribute</a>.</p>
+                        <p class="footer_cont mt-05 wi-16 fs-0875 lh-125 mb-05">We want to make Stooge CSS even greater,
+                            so plesae <a href="https://github.com/chrisjwaddell/Stooge-CSS/blob/main/CONTRIBUTIONS.md"
+                                class="link white underline link-visited">contribute</a>.</p>
                         <p class="footer_licence fs-0875 lh-125">Licensed under MIT</p>
                     </div>
                 </div>
