Minor design changes to header

--- a/components.html
+++ b/components.html
@@ -21,10 +21,10 @@
             <div class="di-fl px-3 px-1-m5 py-075 he-100-p jc-sb pt-025">
                 <div class="di-fl ai-ce jc-sb">
                     <div class="fl-1">
-                        <p class="di-ib wi-10 he-25 ma-0 px-1 py-025 br-3 bsw-1 fs-125 font-mono fw-6 bc-blue-14 white
+                        <p class="di-ib wi-10 he-25 ma-0 px-1 py-025 br-3 bsw-1 fs-125 font-mono ta-ce lh-15 fw-6 bc-blue-14 white
                             bo-white">Stooge CSS
                         </p>
-                        <p id="dev" class="di-ib ma-0 pl-1 fs-125 blue-grey-2 ts-42">Develop fast. CSS in HTML</p>
+                        <p id="dev" class="di-ib ma-0 pl-1 fs-125 white ts-42">Develop fast. CSS in HTML</p>
                     </div>
                 </div>
                 <div class="fl-1">
@@ -221,10 +221,12 @@
                 <div class="container">
                     <div class="di-fl fd-co">
                         <div class="mt-225 mt-05-m3">
-                            <h2 class="ta-ce ma-0 px-1 py-025 fs-25 fs-175-m4 ta-ce font-sans fw-6 white">Stooge CSS</h2>
+                            <h2 class="ta-ce ma-0 px-1 py-025 fs-25 fs-175-m4 ta-ce font-sans fw-6 white">Stooge CSS
+                            </h2>
                         </div>
                         <div class="fl-1">
-                            <h2 class="ta-ce fs-175 fs-15-m4 lh-15 ts-42 mt-1 px-4-m3 px-15-m4 font-mons orange-4">A powerful, intuitive CSS framework
+                            <h2 class="ta-ce fs-175 fs-15-m4 lh-15 ts-42 mt-1 px-4-m3 px-15-m4 font-mons orange-4">A
+                                powerful, intuitive CSS framework
                                 for fast web development</h2>
                         </div>
 
@@ -291,84 +293,101 @@
 
                         <div class="di-fl fd-co mt-15">
                             <div class="">
-                                    <button type="button" class="btn wi-8 he-3 pa-05 ta-ce bc-green-light-8 bo-brown-7 br-05
+                                <button type="button" class="btn wi-8 he-3 pa-05 ta-ce bc-green-light-8 bo-brown-7 br-05
                                         bsw-2">Button</button>
                             </div>
                             <div class="mt-1">
-                                    <pre
-                                        class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-8 he-3 pa-05 ta-ce bc-green-light-8 bo-brown-7 br-05 bsw-2"&gt;Button&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
+                                <pre
+                                    class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-8 he-3 pa-05 ta-ce bc-green-light-8 bo-brown-7 br-05 bsw-2"&gt;Button&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
                             </div>
                             <div class="mt-3">
-                                <button type="button" class="btn wi-8 he-3 pa-05 ta-ce bc-lime-5 indigo-14 bw-0">rectangle</button>
+                                <button type="button"
+                                    class="btn wi-8 he-3 pa-05 ta-ce bc-lime-5 indigo-14 bw-0">rectangle</button>
                             </div>
                             <div class="mt-1">
-                                <pre class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-8 he-3 pa-05 ta-ce bc-lime-5 indigo-14 bw-0"&gt;rectangle&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
+                                <pre
+                                    class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-8 he-3 pa-05 ta-ce bc-lime-5 indigo-14 bw-0"&gt;rectangle&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
                             </div>
                             <div class="mt-3">
-                                    <button type="button"
-                                        class="btn wi-65 he-3 py-05 px-1 fs-1 fw-6 bsw-3 br-2 white bc-teal-15 bo-purple-11">Rounded</button>
+                                <button type="button"
+                                    class="btn wi-65 he-3 py-05 px-1 fs-1 fw-6 bsw-3 br-2 white bc-teal-15 bo-purple-11">Rounded</button>
                             </div>
                             <div class="mt-1">
-                                    <pre class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-65 he-3 py-05 px-1 fs-1 fw-6 bsw-3 br-2 white bc-teal-15 bo-purple-11"&gt;Rounded&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
+                                <pre
+                                    class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-65 he-3 py-05 px-1 fs-1 fw-6 bsw-3 br-2 white bc-teal-15 bo-purple-11"&gt;Rounded&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
                             </div>
                             <div class="mt-3">
                                 <button type="button" class="btn wi-8 he-3 py-05 px-1 fs-1 fw-4 bw-3 br-3 bodoni white
                                 bc-red-13 bo-blue-14">Contact Us</button>
                             </div>
                             <div class="mt-1">
-                                    <pre class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-8 he-3 py-05 px-1 fs-1 fw-4 bw-3 br-3 bodoni white bc-red-13 bo-blue-14"&gt;Contact Us&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
+                                <pre
+                                    class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-8 he-3 py-05 px-1 fs-1 fw-4 bw-3 br-3 bodoni white bc-red-13 bo-blue-14"&gt;Contact Us&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
                             </div>
                             <div class="mt-3">
-                                <button type="button" class="btn wi-6 he-6 fs-1 fw-4 bw-0 br-50-p bsw-2 white bc-green-11 bo-red-11">Round button</button>
+                                <button type="button"
+                                    class="btn wi-6 he-6 fs-1 fw-4 bw-0 br-50-p bsw-2 white bc-green-11 bo-red-11">Round
+                                    button</button>
                             </div>
                             <div class="mt-1">
-                                <pre class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-6 he-6 fs-1 fw-4 bw-0 br-50-p bsw-2 white bc-green-11 bo-red-11"&gt;Round button&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
+                                <pre
+                                    class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-6 he-6 fs-1 fw-4 bw-0 br-50-p bsw-2 white bc-green-11 bo-red-11"&gt;Round button&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
                             </div>
                             <div class="mt-3">
-                                    <button type="button" class="btn wi-8 he-3 py-05 px-1 fs-1 fw-4 bw-4 br-05 bt-dashed white bc-purple-16 bo-green-9">Dashed</button>
+                                <button type="button"
+                                    class="btn wi-8 he-3 py-05 px-1 fs-1 fw-4 bw-4 br-05 bt-dashed white bc-purple-16 bo-green-9">Dashed</button>
                             </div>
                             <div class="mt-1">
-                                <pre class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-8 he-3 py-05 px-1 fs-1 fw-4 bw-4 br-05 bt-dashed white bc-purple-16 bo-green-9"&gt;Dashed&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
+                                <pre
+                                    class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button type="button" class="btn wi-8 he-3 py-05 px-1 fs-1 fw-4 bw-4 br-05 bt-dashed white bc-purple-16 bo-green-9"&gt;Dashed&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
                             </div>
                             <div class="mt-3">
                                 <button class="btn wi-12 he-4 bc-red-7 shadow-2 border-color bw-0">shadow-2</button>
                             </div>
                             <div class="mt-1">
-                                <pre class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button class="btn wi-12 he-4 bc-red-7 shadow-2 border-color bw-0"&gt;shadow-2&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
+                                <pre
+                                    class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button class="btn wi-12 he-4 bc-red-7 shadow-2 border-color bw-0"&gt;shadow-2&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
                             </div>
                             <div class="mt-3">
-                                <button class="btn wi-12 he-4 bc-cyan-5 bo-brown-4 shadow-4 border-color bw-2 underline">shadow-5</button>
+                                <button
+                                    class="btn wi-12 he-4 bc-cyan-5 bo-brown-4 shadow-4 border-color bw-2 underline">shadow-5</button>
                             </div>
                             <div class="mt-1">
-                                <pre class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button class="btn wi-12 he-4 bc-cyan-5 bo-brown-4 shadow-4 border-color bw-2 underline"&gt;shadow-5&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
+                                <pre
+                                    class="pa-1 mw-40a pt-25 po-re br-075"><code>&lt;button class="btn wi-12 he-4 bc-cyan-5 bo-brown-4 shadow-4 border-color bw-2 underline"&gt;shadow-5&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
                             </div>
                             <div class="mt-3">
-                                    <button type="button" class="btn wi-12 py-05 px-2 purple-11 bc-cyan-7 bo-purple-11 bsw-3 fw-6 lh-1 focus-shadow-4">Click me - focus-shadow-4</button>
+                                <button type="button"
+                                    class="btn wi-12 py-05 px-2 purple-11 bc-cyan-7 bo-purple-11 bsw-3 fw-6 lh-1 focus-shadow-4">Click
+                                    me - focus-shadow-4</button>
                             </div>
                             <div class="mt-1">
-                                <pre class="pa-1 pt-25 po-re mw-40a br-075"><code>&lt;button type="button" class="btn wi-12 py-1 px-2 purple-11 bc-cyan-7 bo-purple-11 bsw-3 fw-6 focus-shadow-4"&gt;Click me - focus-shadow-4&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
+                                <pre
+                                    class="pa-1 pt-25 po-re mw-40a br-075"><code>&lt;button type="button" class="btn wi-12 py-1 px-2 purple-11 bc-cyan-7 bo-purple-11 bsw-3 fw-6 focus-shadow-4"&gt;Click me - focus-shadow-4&lt;/button&gt;</code><button class="btn btn-copy">Copy</button></pre>
                             </div>
                             <div class="mt-3">
-                                <button class="btn wi-8 he-3 pl-25 fs-075 bc-lime-2 purple-11 bo-purple-11 bw-1 br-4 btrr-0 bblr-0 bbrr-0">Top left</button><button class="btn wi-8 he-3 pr-25 fs-075 bc-lime-2 purple-11 bo-purple-11 bw-1 br-4 btlr-0 bblr-0
+                                <button
+                                    class="btn wi-8 he-3 pl-25 fs-075 bc-lime-2 purple-11 bo-purple-11 bw-1 br-4 btrr-0 bblr-0 bbrr-0">Top
+                                    left</button><button class="btn wi-8 he-3 pr-25 fs-075 bc-lime-2 purple-11 bo-purple-11 bw-1 br-4 btlr-0 bblr-0
                                     bbrr-0">Top right</button><br>
-                                    <button class="btn wi-8 he-3 pl-2 fs-075 bc-lime-2 purple-11 bo-purple-11 bw-1 br-4 btlr-0 btrr-0
+                                <button class="btn wi-8 he-3 pl-2 fs-075 bc-lime-2 purple-11 bo-purple-11 bw-1 br-4 btlr-0 btrr-0
                                     bbrr-0">Bottom left</button><button class="btn wi-8 he-3 ml-0 pr-25 fs-075 bc-lime-2 purple-11 bo-purple-11 bw-1 br-4 btlr-0 btrr-0
                                     bblr-0">Bottom right</button>
-                                </div>
                             </div>
+                        </div>
                     </div>
 
 
-                        <p class="mt-2">The <span class="code fw-5">.btn</span> class adds some default properties like
-                            "outline: none;". Copy and paste <span class="code fw-5">.btn</span> into your CSS file and
-                            copy and paste the HTML
-                            code to immediately have a decent button. </p>
-                        <p class="mt-2">Depending on the browser, when adding the .btn to an anchor &lta&gt, the text
-                            may go bold on hover and the anchor width will expand slightly and cause things to the right
-                            of it to move to the right. To fix this, you can either fix the width eg <span
-                                class="code fw-5">w10</span> or you could add the
-                            following <span class="code fw-5">hover-fw-4 hover-text-fw-7</span>. This keeps the
-                            font-weight the same but adds text-shadow on hovering over the anchor. </p>
+                    <p class="mt-2">The <span class="code fw-5">.btn</span> class adds some default properties like
+                        "outline: none;". Copy and paste <span class="code fw-5">.btn</span> into your CSS file and
+                        copy and paste the HTML
+                        code to immediately have a decent button. </p>
+                    <p class="mt-2">Depending on the browser, when adding the .btn to an anchor &lta&gt, the text
+                        may go bold on hover and the anchor width will expand slightly and cause things to the right
+                        of it to move to the right. To fix this, you can either fix the width eg <span
+                            class="code fw-5">w10</span> or you could add the
+                        following <span class="code fw-5">hover-fw-4 hover-text-fw-7</span>. This keeps the
+                        font-weight the same but adds text-shadow on hovering over the anchor. </p>
 
 
                     <div class="mt-25"><span class="id" id="button-group"> &nbsp; </span></div>
@@ -402,7 +421,8 @@
                     <div class="mt-15"><span class="id" id="anchor-tags"> &nbsp; </span></div>
                     <div class="mt-15">
                         <h3>Anchor tags (Links)</h3>
-                        <p>The <span class="code fw-5">.link</span> class provides some sensible anchor link defaults.</p>
+                        <p>The <span class="code fw-5">.link</span> class provides some sensible anchor link defaults.
+                        </p>
                         <a class="di-bl link my-1 fs-125">Basic anchor tag</a>
                         <a class="di-bl link my-1 fs-125">Basic anchor tag</a>
                         <a class="di-bl link btn my-1 wi-12 he-au  py-025 fs-125 white bc-purple-12 br-025">Basic
@@ -474,7 +494,8 @@
 
                         <div class="txtimg wi-100-p">
                             <div class="di-fl fw-wr fw-we-m4 mt-2 mx-2 mx-0-m4">
-                                <div class="text-block wi-50-p wi-100-p-m4 self-center px-2 py-2 my-0-m4 mx-0-m4 py-0-m4 px-1-m4">
+                                <div
+                                    class="text-block wi-50-p wi-100-p-m4 self-center px-2 py-2 my-0-m4 mx-0-m4 py-0-m4 px-1-m4">
                                     <h3>Text-Image</h3>
                                     <p>On desktop, Text is on the left and Image is on the right, on mobile Image is at
                                         the top. <span class="code fw-5">wrap-reverse-m4</span> reverses the order for
@@ -610,7 +631,9 @@
                     <div class="di-fl fd-co jc-ce">
                         <p class="footer__logo di-ib wi-10 he-25 ma-0 px-1 py-025 ta-ce br-3 bsw-1 fs-125 font-mono fw-6 bc-blue-14 white
                             bo-white">Stooge CSS</p>
-                        <p class="footer_cont mt-05 wi-16 fs-0875 lh-125 mb-05">We want to make Stooge CSS even greater, so plesae <a href="https://github.com/chrisjwaddell/Stooge-CSS/blob/main/CONTRIBUTIONS.md" class="link white underline link-visited">contribute</a>.</p>
+                        <p class="footer_cont mt-05 wi-16 fs-0875 lh-125 mb-05">We want to make Stooge CSS even greater,
+                            so plesae <a href="https://github.com/chrisjwaddell/Stooge-CSS/blob/main/CONTRIBUTIONS.md"
+                                class="link white underline link-visited">contribute</a>.</p>
                         <p class="footer_licence fs-0875 lh-125">Licensed under MIT</p>
                     </div>
                 </div>
