--- a/colors.html
+++ b/colors.html
@@ -21,10 +21,10 @@
             <div class="di-fl px-3 px-1-m5 py-075 he-100-p jc-sb">
                 <div class="di-fl ai-ce jc-sb">
                     <div class="fl-1">
-                        <p class="di-ib wi-10 he-25 ma-0 px-1 py-025 br-3 bsw-1 fs-125 font-mono fw-6 bc-blue-14 white
+                        <p class="di-ib wi-10 he-25 ma-0 px-1 py-025 br-3 bsw-1 fs-125 font-mono ta-ce lh-15 fw-6 bc-blue-14 white
                             bo-white">Stooge CSS
                         </p>
-                        <p id="dev" class="di-ib ma-0 pl-1 fs-125 blue-grey-2 ts-42">Develop fast. CSS in HTML</p>
+                        <p id="dev" class="di-ib ma-0 pl-1 fs-125 white ts-42">Develop fast. CSS in HTML</p>
                     </div>
                 </div>
                 <div class="fl-1">
@@ -59,12 +59,14 @@
                             hover-underline">Introduction</a>
                     </li>
                     <li class="pa-05 br-05 hover-bc-grey-5"><a href="./index.html#getting-started"
-                            class="link black no-underline link-visited hover-blue-14 hover-underline">Gettting started</a>
+                            class="link black no-underline link-visited hover-blue-14 hover-underline">Gettting
+                            started</a>
                     </li>
                 </ul>
 
                 <h2 class="mt-1 mb-05 lh-075 "><a href="./layout-and-position.html"
-                        class="link lh-125 fs-1125 black no-underline link-visited hover-blue-14 hover-underline">Layout and Position</a>
+                        class="link lh-125 fs-1125 black no-underline link-visited hover-blue-14 hover-underline">Layout
+                        and Position</a>
                 </h2>
                 <ul class="ml-025 my-0 list fw-4 black di-no">
                     <li class="pa-05 br-05 hover-bc-grey-5"><a href="./layout-and-position.html#display"
@@ -218,10 +220,12 @@
                 <div class="container">
                     <div class="di-fl fd-co">
                         <div class="mt-225 mt-05-m3">
-                            <h2 class="ta-ce ma-0 px-1 py-025 fs-25 fs-175-m4 ta-ce font-sans fw-6 white">Stooge CSS</h2>
+                            <h2 class="ta-ce ma-0 px-1 py-025 fs-25 fs-175-m4 ta-ce font-sans fw-6 white">Stooge CSS
+                            </h2>
                         </div>
                         <div class="fl-1">
-                            <h2 class="ta-ce fs-175 ts-42 mt-1 px-4-m3 px-15-m4 font-mons orange-4">A powerful, intuitive CSS framework
+                            <h2 class="ta-ce fs-175 ts-42 mt-1 px-4-m3 px-15-m4 font-mons orange-4">A powerful,
+                                intuitive CSS framework
                                 for fast web development</h2>
                         </div>
 
@@ -1156,7 +1160,9 @@
                     <div class="di-fl fd-co jc-ce">
                         <p class="footer__logo di-ib wi-10 he-25 ma-0 px-1 py-025 ta-ce br-3 bsw-1 fs-125 font-mono fw-6 bc-blue-14 white
                             bo-white">Stooge CSS</p>
-                        <p class="footer_cont mt-05 wi-16 fs-0875 lh-125 mb-05">We want to make Stooge CSS even greater, so plesae <a href="https://github.com/chrisjwaddell/Stooge-CSS/blob/main/CONTRIBUTIONS.md" class="link white underline link-visited">contribute</a>.</p>
+                        <p class="footer_cont mt-05 wi-16 fs-0875 lh-125 mb-05">We want to make Stooge CSS even greater,
+                            so plesae <a href="https://github.com/chrisjwaddell/Stooge-CSS/blob/main/CONTRIBUTIONS.md"
+                                class="link white underline link-visited">contribute</a>.</p>
                         <p class="footer_licence fs-0875 lh-125">Licensed under MIT</p>
                     </div>
                 </div>
